GUI adjustments...
- Add convenience option to quickly reset colors & type tags
- Allow spine counts from bookmarked locations
- Standardize icons
- CommonDynamicCmd: Exit discretely when canceled
- Add Bookmark Manager to Cmd Palette
- Add option for timestamps in Script Recorder
- Fix Script > New From Clipboard
- Code cleanup
- Misc